# metisem

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  check_cache.py  check_duplicate_stems.py  check_tag_distribution.py  count_links.py  debug_links.py  debug_run.py  find_zero_links.py  main.py  pyproject.toml  requirements.txt  run_summariser.bat  run_tag_summaries.bat  sample_files.py  summariser.py  summariser_ollama.py  tagger.py  tags.txt  tags_described.txt  test_modify.py  test_tags.txt  title_fixer.py  update_graph_colors.py
.claude/: README.md  portable_config.local.example.yaml  settings.json  settings.local.example.json  statusline.ps1  statusline.py  statusline.sh
.claude/commands/: create_plan.md  gitsync.md  implement_plan.md  phase_complete.md  research_codebase.md  resume_project.md
.claude/extensions/: README.md
.claude/extensions/data-contracts/: README.md  data-contracts.md  dictionary.template.md
.claude/extensions/team-workflow/: README.md  (+3 more)
.claude/rules/: command-execution.md  diagnostics.md  env-handling.md  hard-constraints.md  phase-gates.md
docs/: CONFIGURATION.md
docs/state/: phase_implementation_checkpoint.md
metisem/core/: __init__.py  cache.py  database.py  embeddings.py  files.py  run_logger.py
metisem/providers/: __init__.py
obsidian_linker/: __init__.py
obsidian_linker/core/: cache.py  files.py  markers.py
scripts/: apply_graph_palette.py  cc-transcript-latest.ps1  cc-transcript-latest.sh  cc-transcript.ps1  cc-transcript.sh  cleanup_logs.py  query_runs.py  test_run_logging.py  validate-artefacts.py  validate-pack.py
(+16 files in other folders)
