[project]
name = "obsidian-linker"
version = "0.1.0"
description = "Semantic linking and auto-tagging toolkit for Obsidian markdown vaults"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "obsidian-linker contributors"}
]
keywords = ["obsidian", "markdown", "semantic-search", "nlp", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/PFunnell/metisem"
Repository = "https://github.com/PFunnell/metisem"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok in __init__.py
